--- a/newproject/templates/manager.html
+++ b/newproject/templates/manager.html
@@ -18,7 +18,8 @@
 </div>
 
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/applications">Home</a>
+  <a class="navbar-brand" href="/home">Home</a>
     <a class="navbar-brand" href="/applications">View Applications</a>
-    <a class="navbar-brand" href="/applications">View Applications</a>
+    <a class="navbar-brand" href="/profile">Profile</a>
+    <button><a class="navbar-brand" href="/logout">Logout</a></button>
 </nav>
