--- a/newproject/templates/emp.html
+++ b/newproject/templates/emp.html
@@ -1,3 +1,4 @@
+
 <!-- Image and text -->
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -27,7 +28,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Manager Page</a>
+  <a class="navbar-brand" href="#">Employee Page</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,32 +41,11 @@
       <li class="nav-item">
          <a class="nav-link" href="/profile">Profile</a>
       </li>
-
       <li class="nav-item">
-         <a class="nav-link" href="/addemployee">Add Employees</a>
+         <a class="nav-link" href="/addleaveapp"> Apply for Leave </a>
       </li>
 
-      <li class="nav-item">
-         <a class="nav-link" href="/employees">View Employees</a>
-      </li>
 
-       <li class="nav-item">
-         <a class="nav-link" href="/applications">View Applications</a>
-      </li>
-
-<!--        <li class="nav-item">-->
-<!--         <a class="nav-link" href="/addempshift">Add Employee Shifts</a>-->
-<!--      </li>-->
-
-        <li class="nav-item">
-         <a class="nav-link" href="/shifts">View Employee Shifts</a>
-      </li>
-
-        <li class="nav-item">
-         <a class="nav-link" href="/shiftpolicy">Shift Policy</a>
-      </li>
-
-    </ul>
      <a  href="/logout" class="btn btn-info btn-lg logout">
           <span class="glyphicon glyphicon-log-out"></span> Log out
      </a>
