--- a/newproject/templates/main.html
+++ b/newproject/templates/main.html
@@ -23,7 +23,7 @@
             <div class="card-body py-5 px-md-5">
               <form>
                   <a class="btn btn-primary btn-block mb-4" href="/manager"> Manager Profile</a>
-                  <a class="btn btn-primary btn-block mb-4" href="/employee"> Employee Profile</a>
+                  <a class="btn btn-primary btn-block mb-4" href="/emp"> Employee Profile</a>
               </form>
             </div>
           </div>
